alignment fixed

--- a/src/app/book/book-list/book-list.component.scss
+++ b/src/app/book/book-list/book-list.component.scss
@@ -1,4 +1,15 @@
-.create-button-container {
-    margin-top: 60px;
+.button-container {
+    display: flex;
+    align-items: center;
+    margin-top: 65px;
+    margin-bottom: 20px;
+  }
+  
+  .search-container {
+    margin-right: 10px; /* Adjust the spacing between the search icon and input */
+  }
+  
+  .create-container {
+    margin-left: auto; /* Push the create button to the right */
   }
   
